--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,4 +1,7 @@
+@import "variables/variables";
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
+
+@import "mixins/mixins";
 
 @import "global/layout";
 @import "site/site";
