--- a/assets/scss/global/_layout.scss
+++ b/assets/scss/global/_layout.scss
@@ -1,10 +1,12 @@
 body {
+    position: relative;
     padding-top: 56px;
 }
 
 #hero-carousel {
     margin-bottom: 3rem;
 }
+
 .site-content > section:not(.parallax) {
     padding-top: 3rem;
     padding-bottom: 3rem;
