--- a/assets/scss/media/_gallery.scss
+++ b/assets/scss/media/_gallery.scss
@@ -9,5 +9,11 @@
         @include media-breakpoint-up(xl) {
             height: 250px;
         }
+
+        img {
+            min-width: 100%;
+            min-height: 100%;
+            object-fit: cover;
+        }
     }
 }
