--- a/assets/scss/modules/_carousel.scss
+++ b/assets/scss/modules/_carousel.scss
@@ -7,3 +7,10 @@
 .carousel-item {
     max-height: 80vh;
 }
+
+.carousel-caption {
+    right: 0;
+    bottom: 10px;
+    left: 0;
+    background: rgba(0,0,0,.7);
+}
