--- a/assets/scss/modules/_parallax.scss
+++ b/assets/scss/modules/_parallax.scss
@@ -1,15 +1,19 @@
 .parallax {
     position: relative;
-    padding: 15rem 0 15rem;
+    padding: 5rem 0 5rem;
     text-align: center;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-}
 
-.parallax-content {
+    @include media-breakpoint-up(sm) {
+        padding: 10rem 0 10rem;
+    }
 
+    @include media-breakpoint-up(md) {
+        padding: 15rem 0 15rem;
+    }
 }
 
 .slogan {
@@ -22,13 +26,13 @@
 }
 
 #slogan1 {
-    background-image: url('../images/parallax1.jpg');
+    @include parallax-image('../images/parallax1');
 }
 
 #slogan2 {
-    background-image: url('../images/parallax2.jpg');
+    @include parallax-image('../images/parallax2');
 }
 
 #slogan3 {
-    background-image: url('../images/parallax3.jpg');
+    @include parallax-image('../images/parallax4');
 }
