--- a/assets/scss/media/_icons.scss
+++ b/assets/scss/media/_icons.scss
@@ -12,8 +12,9 @@
     }
 }
 
-.heart-icon {
-    fill: red;
+.handshake-icon,
+.bullet-icon {
+    fill: theme-color('primary');
 }
 
 .compass-icon {
