--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -3,7 +3,10 @@
 
 @import "mixins/mixins";
 
-@import "global/layout";
+@import "typography/typography";
+@import "elements/elements";
+
+@import "global/global";
 @import "site/site";
 
 @import "modules/carousel";
@@ -11,6 +14,7 @@
 @import "modules/intro";
 @import "modules/card-deck";
 @import "modules/ekko-lightbox";
+@import "modules/maps";
 
 @import "media/media";
 
