--- a/assets/scss/global/_layout.scss
+++ b/assets/scss/global/_layout.scss
@@ -1,13 +1,18 @@
 body {
     position: relative;
+    min-height: 100%;
     padding-top: 56px;
 }
 
-#hero-carousel {
-    margin-bottom: 3rem;
-}
-
-.site-content > section:not(.parallax) {
+.site-content > .content-section {
     padding-top: 3rem;
     padding-bottom: 3rem;
+}
+
+.content-section-bg {
+    background-image: 
+        linear-gradient(90deg, rgba(33, 37, 41, .015) 0, rgba(33, 37, 41, .015)),
+        linear-gradient(90deg, rgba(33, 37, 41, .015) 0, rgba(33, 37, 41, .015)),
+        linear-gradient(to top left, rgba(33, 37, 41, .015) 50%, transparent 0),
+        linear-gradient(to top left, rgba(33, 37, 41, .015) 50%, transparent 0);
 }
