--- a/assets/scss/modules/_card-deck.scss
+++ b/assets/scss/modules/_card-deck.scss
@@ -1,4 +1,7 @@
 .card-deck {
+    margin-top: 4rem;
+    margin-bottom: 2rem;
+
     @include media-breakpoint-only(sm) {
         flex-flow: column;
 
